add routing to app

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React Weather service app "
     />
+    <meta name="author" content="Gilchrist Bryan ADJEI">
+    <meta name="keywords" content="Gilchrist Bryan ADJEI,github,bryanskovich,react-weather-app,weather-app">
    
     <!--
       manifest.json provides metadata used when your web app is installed on a
